{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 239,
  "lineage": "d866e95e-c1f8-3790-81a1-c37425025ea6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicmaster",
            "internal_domain_name_suffix": "gzwdohhslfae3cv3liwlcbpnzg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfigurationMaster",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipmaster",
                "subnet_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-22-2F-0C",
            "name": "vmnicmaster",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "virtual_machine_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Compute/virtualMachines/fjarrin-vm-master"
          },
          "dependencies": [
            "azurerm_public_ip.publicIpMaster",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicNfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicnfs",
            "internal_domain_name_suffix": "gzwdohhslfae3cv3liwlcbpnzg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfigurationNfs",
                "primary": true,
                "private_ip_address": "10.0.1.13",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipnfs",
                "subnet_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-22-20-60",
            "name": "vmnicnfs",
            "private_ip_address": "10.0.1.13",
            "private_ip_addresses": [
              "10.0.1.13"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "virtual_machine_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Compute/virtualMachines/fjarrin-vm-nfs"
          },
          "dependencies": [
            "azurerm_public_ip.publicIpNfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicWorker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicworker1",
            "internal_domain_name_suffix": "gzwdohhslfae3cv3liwlcbpnzg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfigurationWorker1",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipworker1",
                "subnet_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-22-20-98",
            "name": "vmnicworker1",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "virtual_machine_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Compute/virtualMachines/fjarrin-vm-worker1"
          },
          "dependencies": [
            "azurerm_public_ip.publicIpWorker1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicWorker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicworker2",
            "internal_domain_name_suffix": "gzwdohhslfae3cv3liwlcbpnzg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfigurationWorker2",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipworker2",
                "subnet_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8D-52-3C",
            "name": "vmnicworker2",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "virtual_machine_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Compute/virtualMachines/fjarrin-vm-worker2"
          },
          "dependencies": [
            "azurerm_public_ip.publicIpWorker2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "secGroupAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicmaster|/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficmaster",
            "network_interface_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicmaster",
            "network_security_group_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficmaster"
          },
          "dependencies": [
            "azurerm_network_interface.nicMaster",
            "azurerm_network_security_group.secGroupMaster",
            "azurerm_public_ip.publicIpMaster",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "secGroupAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicworker1|/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficworker",
            "network_interface_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicworker1",
            "network_security_group_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficworker"
          },
          "dependencies": [
            "azurerm_network_interface.nicWorker1",
            "azurerm_network_security_group.secGroupWorker",
            "azurerm_public_ip.publicIpWorker1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "secGroupAssociation3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicworker2|/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficworker",
            "network_interface_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicworker2",
            "network_security_group_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficworker"
          },
          "dependencies": [
            "azurerm_network_interface.nicWorker2",
            "azurerm_network_security_group.secGroupWorker",
            "azurerm_public_ip.publicIpWorker2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "secGroupAssociation4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicnfs|/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficnfs",
            "network_interface_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicnfs",
            "network_security_group_id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficnfs"
          },
          "dependencies": [
            "azurerm_network_interface.nicNfs",
            "azurerm_network_security_group.secGroupNfs",
            "azurerm_public_ip.publicIpNfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secGroupMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficmaster",
            "location": "eastus",
            "name": "sshtrafficmaster",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secGroupNfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficnfs",
            "location": "eastus",
            "name": "sshtrafficnfs",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secGroupWorker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficworker",
            "location": "eastus",
            "name": "sshtrafficworker",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIpMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "vmmasterunir180",
            "fqdn": "vmmasterunir180.eastus.cloudapp.azure.com",
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipmaster",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.93.189",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmipmaster",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIpNfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "vmnfsunir180",
            "fqdn": "vmnfsunir180.eastus.cloudapp.azure.com",
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipnfs",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.229.196",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmipnfs",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIpWorker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "vmworker1unir180",
            "fqdn": "vmworker1unir180.eastus.cloudapp.azure.com",
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipworker1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.95.99",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmipworker1",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIpWorker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "vmworker2unir180",
            "fqdn": "vmworker2unir180.eastus.cloudapp.azure.com",
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipworker2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.229.110",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmipworker2",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "1c376c36-59f2-4e40-8abd-5a2cb105edce",
            "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet",
            "location": "eastus",
            "name": "kubernetesnet",
            "resource_group_name": "kubernetes_rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/308afee2-dc4c-41c1-b330-818c7897ea65/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
                "name": "terraformsubnet"
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}